k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-delivery
  labels:
    app.kubernetes.io/name: local-delivery
